compiler_errors.log
gcc -I/usr/include/gtk-3.0 -I/usr/include/pango-1.0 -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/harfbuzz -I/usr/include/freetype2 -I/usr/include/libpng16 -I/usr/include/libmount -I/usr/include/blkid -I/usr/include/fribidi -I/usr/include/cairo -I/usr/include/pixman-1 -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/x86_64-linux-gnu -I/usr/include/webp -I/usr/include/gio-unix-2.0 -I/usr/include/atk-1.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/at-spi-2.0 -I/usr/include/dbus-1.0 -I/usr/lib/x86_64-linux-gnu/dbus-1.0/include -pthread  -I. stage1/root_gtk.c stage2/camera/camera.c stage2/input_controller/input_control.c stage2/interface/simulate/simulation.c stage2/interface/render/shader_loading.c stage2/interface/render/new_render.c stage2/interface/sphere_object/meshing/sphere_meshing.c stage2/interface/gui/gui.c stage3/boundary/boundary.c stage3/scene/scene_init.c stage3/timing_belt/frame_timer.c stage3/input_extension/mouse_lock.c stage4/interaction/spawner/object_spawner.c stage4/interaction/selector/object_selector.c stage4/broadphase/broadphase.c stage4/debug_overlay/overlay.c stage5/rendering/grid.c stage5/rendering/wireframe.c stage5/scene_io/scene_saving.c stage5/scene_io/scene_load.c stage5/constraints/spring_joint.c -lgtk-3 -lgdk-3 -lz -lpangocairo-1.0 -lpango-1.0 -lharfbuzz -latk-1.0 -lcairo-gobject -lcairo -lgdk_pixbuf-2.0 -lgio-2.0 -lgobject-2.0 -lglib-2.0 -lepoxy  -lm -o engine
stage2/interface/simulate/simulation.c: In function ‘physics_step_increment’:
stage2/interface/simulate/simulation.c:30:9: warning: implicit declaration of function ‘scene_saving’; did you mean ‘scene_saving_h’? [-Wimplicit-function-declaration]
   30 |         scene_saving ("scene.dat");
      |         ^~~~~~~~~~~~
      |         scene_saving_h
stage2/interface/simulate/simulation.c:33:9: warning: implicit declaration of function ‘scene_load’; did you mean ‘scene_load_h’? [-Wimplicit-function-declaration]
   33 |         scene_load ("scene.dat");
      |         ^~~~~~~~~~
      |         scene_load_h
stage2/interface/simulate/simulation.c:34:21: error: ‘input_status’ has no member named ‘t_key’; did you mean ‘w_key’?
   34 |         main_inputs.t_key = false;
      |                     ^~~~~
      |                     w_key
stage2/interface/simulate/simulation.c:36:40: error: ‘last_selected’ undeclared (first use in this function)
   36 |         if ((selected_object >= 0) && (last_selected >= 0) && (selected_object != last_selected)) {
      |                                        ^~~~~~~~~~~~~
stage2/interface/simulate/simulation.c:36:40: note: each undeclared identifier is reported only once for each function it appears in
stage2/interface/simulate/simulation.c:45:13: warning: implicit declaration of function ‘joint_remove_for_object’ [-Wimplicit-function-declaration]
   45 |             joint_remove_for_object (selected_object);
      |             ^~~~~~~~~~~~~~~~~~~~~~~
stage2/interface/simulate/simulation.c:51:40: error: ‘spring_joint_mechanism’ has no member named ‘active’
   51 |                 if (!joint_pool [step6].active) {continue;}
      |                                        ^
stage5/scene_io/scene_load.c: In function ‘scene_loading’:
stage5/scene_io/scene_load.c:5:10: error: ‘source’ undeclared (first use in this function); did you mean ‘GSource’?
    5 |     if (!source) {fprintf (stderr, "Error LDF01: Loading File Error %s\n", file_src); return 0;}
      |          ^~~~~~
      |          GSource
stage5/scene_io/scene_load.c:5:10: note: each undeclared identifier is reported only once for each function it appears in
stage5/scene_io/scene_load.c:8:13: warning: passing argument 1 of ‘fscanf’ from incompatible pointer type [-Wincompatible-pointer-types]
    8 |     fscanf (file_src, "%d\n", &count_objects);
      |             ^~~~~~~~
      |             |
      |             const char *
In file included from stage5/scene_io/../../stage1/math/math3D.h:1,
                 from stage5/scene_io/../../stage1/master_header.h:4,
                 from stage5/scene_io/scene_load.h:3,
                 from stage5/scene_io/scene_load.c:1:
/usr/include/stdio.h:422:37: note: expected ‘FILE * restrict’ but argument is of type ‘const char *’
  422 | extern int fscanf (FILE *__restrict __stream,
      |                    ~~~~~~~~~~~~~~~~~^~~~~~~~
make: *** [Makefile:28: engine] Error 1
